Fix: Progress bar not visible due to z-index not set

--- a/src/components/Video/Video.scss
+++ b/src/components/Video/Video.scss
@@ -67,6 +67,7 @@ $progressBackground: #4c4c4c;
 $progressForeground: #a5a5a5;
 
 .progress {
+  z-index: 3;
   grid-row: 1;
   grid-column: 1/-1;
   align-self: end;
